--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
   background-color: #FEC44F;
 }
 
-h1{font-size: 700;
+h1{font-weight: : 700;
   font-family: "Lato", sans-serif;
   color:#9A190F;
 }
