--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@ body{
   background-color: #FEC44F;
 }
 
-h1{font-weight: : 700;
+h1{font-weight: : 900;
   font-family: "Lato", sans-serif;
   color:#9A190F;
+  font-size: 26px;
 }
