--- a/style.css
+++ b/style.css
@@ -10,3 +10,9 @@ h1{font-weight: : 900;
   color:#9A190F;
   font-size: 26px;
 }
+
+h2{
+  font-weight: 700;
+  color: #9A190F;
+  font-size: 26px;
+}
