--- a/style.css
+++ b/style.css
@@ -45,3 +45,10 @@ float:left;
   box-sizing: border-box;
   float:left;
 }
+
+#link{
+  width: 25%;
+  padding:15px;
+  box-sizing: border-box;
+  float:left;
+}
