--- a/ugly_webpage/style.css
+++ b/ugly_webpage/style.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:400,100,300,900,700);
+@import url(https://fonts.googleapis.com/css?family=Ubuntu:400,700,500,300);
 
 body{
   background-color: #3D1C08;
@@ -9,12 +10,99 @@ color: #584200;
 }
 
 #jabba{
+  width: 30%;
+  padding: 15px;
+  margin: 2px;
+  box-sizing: border-box;
+  float: right;
 color:white;
 font-style: italic;
 font-family: "Lato", sans-serif;
+font-size: 250%;
+letter-spacing: inherit;
+font-weight: 400;
 }
 
 #jaws{
-box-sizing: border-box;
+  width: 30%;
+  padding: 15px;
+  margin: 2px;
+  box-sizing: border-box;
+  float: right;
 color: blue;
+font-family: "Ubuntu",sans-serif;
+font-size: 700;
+text-decoration: line-through;
+font-size: 300%
+}
+
+#uffish{
+  width: 32%;
+  padding: 17px;
+  margin: 7px;
+  box-sizing: border-box;
+  float: left;
+  color:purple;
+  font-family: "Lato", sans-serif;
+  font-size:200%;
+  letter-spacing:normal;
+  font-weight: 400;
+}
+
+#seven {
+  width: 9%;
+  padding: 53px;
+  margin: 7px;
+  box-sizing: border-box;
+  float: right;
+  color:orange;
+  font-family: "Lato", sans-serif;
+  font-size:200%;
+  text-overflow: ellipsis;
+  font-weight: 100;
+  position: fixed;
+}
+
+#one{
+  width: 70%;
+  padding-left: 50px;
+  margin-top: inherit;
+  box-sizing: border-box;
+  float: right;
+  color: white;
+  font-family: "Ubuntu", sans-serif;
+  text-decoration: overline;
+  font-weight: 500;
+  font-size: 70%
+}
+#nope{
+  word-spacing: 12px;
+  width: 12%;
+  padding-left: 0px;
+  box-sizing: border-box;
+  float: right;
+  color: white;
+  font-family: "Ubuntu", sans-serif;
+  text-decoration: underline;
+  font-weight: 500;
+  font-size: 260%;
+  position: relative;
+  max-width: 100px;
+
+}
+
+#lop{
+  max-height: 50px;
+  width: 40%;
+  padding-right: 29px;
+  margin: 90px;
+  box-sizing: border-box;
+  float: right;
+  color: pink;
+  font-family: "Lato", sans-serif;
+  text-decoration: line-through;
+  font-weight: 900;
+  font-size: 150%;
+  position: sticky;
+
 }
