--- a/ugly_webpage/style.css
+++ b/ugly_webpage/style.css
@@ -1,6 +1,10 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:400,100,300,900,700);
 @import url(https://fonts.googleapis.com/css?family=Ubuntu:400,700,500,300);
-
+header{
+  font-family: "Lato",sans-serif;
+  font-weight: 700;
+  color: orange;
+}
 body{
   background-color: #3D1C08;
 }
