--- a/final_project/style.css
+++ b/final_project/style.css
@@ -5,7 +5,7 @@
 margin-right: 20px;
 padding-bottom: 30px;
 padding-top: 15px;
-text-align: center;
+text-align: center;+
 }
 
 #description{
@@ -21,7 +21,7 @@ h1{
   font-weight: 500;
   color: #EF4C86;
   text-align: center;
-  font-size: 15em;
+  font-size: 12em;
 }
 
 h4{
